improved structure of dash app

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 .idea/
 venv/
 
-generate_data/__pycache__/
+data/__pycache__/
 metrics/__pycache__/
 models/__pycache__/
 models/regression/__pycache__/
-
+dash_app/__pycache__/
